force-app/main/default/objects/Departure_Date__c/Departure_Date__c.object-meta.xml
<CustomObject>
    <label>Departure Date</label>
    <nameField>
        <label>Departure Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departure Date</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>