force-app/main/default/objects/Departure_Date__c/fields/Details_Comments__c.field-meta.xml
<CustomField>
    <fullName>Details_Comments__c</fullName>
    <label>Details/Comments</label>
    <type>TextArea</type>
</CustomField>