force-app/main/default/objects/Departure_Date__c/fields/Hss_Category__c.field-meta.xml
<CustomField>
    <fullName>Hss_Category__c</fullName>
    <label>Hss Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Per Trip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>