force-app/main/default/objects/Departure_Date__c/fields/Single_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Single_Occupancy__c</fullName>
    <label>Single Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>