force-app/main/default/objects/Departure_Date__c/fields/Trip_Option__c.field-meta.xml
<CustomField>
    <fullName>Trip_Option__c</fullName>
    <label>Trip Option</label>
    <referenceTo>Trip_Option__c</referenceTo>
    <relationshipLabel>Departure Date</relationshipLabel>
    <relationshipName>Departure_Date</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>